<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Profile"
        app:showAsAction="always" />
</menu>