...
            app:layout_constraintBottom_toBottomOf="@+id/location_icon_browser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_title_browser"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/join_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:backgroundTint="?attr/colorPrimary"
            app:cornerRadius="10dp"
            android:text="Join Event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toEndOf="@+id/event_location_browser"
            app:layout_constraintTop_toBottomOf="@+id/event_title_browser" />

        <TextView
...
