<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/browse_item"
        android:title="Browse"
        android:icon="@drawable/browse_image" />
    <item
        android:id="@+id/attending_item"
        android:title="Attending"
        android:icon="@drawable/attending_image" />
    <item android:id="@+id/create_event_placeholder" />
    <item
        android:id="@+id/organizing_item"
        android:title="Organizing"
        android:icon="@drawable/organizing_image"/>
    <item
        android:id="@+id/profile_item"
        android:title="Profile"
        android:icon="@drawable/profile_image"/>
</menu>